Fixed missing color in Firefox

--- a/chrome-stylebot.css
+++ b/chrome-stylebot.css
@@ -263,7 +263,7 @@ blockquote {
 }
 
 .page-description {
-  color : #666;
+  color : #666 !important;
 }
 
 /* BEGIN Page number & Interval tabs */
