--- a/firefox-stylish.css
+++ b/firefox-stylish.css
@@ -264,7 +264,7 @@ blockquote {
 }
 
 .page-description {
-  color : #666;
+  color : #666 !important;
 }
 
 /* BEGIN Page number & Interval tabs */
